--- a/app/views/customers/_form_tel_number.html.erb
+++ b/app/views/customers/_form_tel_number.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-12">
         <div class="card card-primary">
           <div class="card-header">
-            <h3 class="card-title">電話番号を入力してください。 <small></small></h3>
+            <h3 class="card-title"><%= t('.card_title') %><small></small></h3>
           </div>
 
           <%= form_with(model: customer, url: url, local: true) do |f| %>
