--- a/app/views/layouts/_line_message_notify_area.html.erb
+++ b/app/views/layouts/_line_message_notify_area.html.erb
@@ -22,7 +22,7 @@
       </a>
     <% end %>
     <div class="dropdown-divider"></div>
-    <a href="<%= customers_path %>" class="dropdown-item dropdown-footer">顧客一覧へ</a>
+    <a href="<%= customers_path %>" class="dropdown-item dropdown-footer"><%= t('.to_customers_link') %></a>
   </div>
 <% else %>
 <% end %>
