--- a/app/views/customer/visited_logs/_form.html.erb
+++ b/app/views/customer/visited_logs/_form.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-12">
         <div class="card card-primary">
           <div class="card-header">
-            <h3 class="card-title">履歴情報を入力してください。 <small></small></h3>
+            <h3 class="card-title"><%= t('.card_title') %><small></small></h3>
           </div>
 
           <%= form_with(model: visited_log, url: url, local: true) do |f| %>
@@ -13,8 +13,8 @@
               <div class="form-group">
                 <% visited_date_err = true if visited_log.errors.include?(:visited_date) %>
                 <%= f.select :year, ((Date.today - 1.year).year.to_i..Date.today.year.to_i).each{|num| num.to_s.rjust(2, '0') }, { include_blank: false }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
-                年<%= f.select :month, (1..12).map{|num| num.to_s.rjust(2, '0') }, { include_blank: false }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
-                月<%= f.select :day, (1..31).map{|num| num.to_s.rjust(2, '0') }, { include_blank: false }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>日
+                <%= t('.year') %><%= f.select :month, (1..12).map{|num| num.to_s.rjust(2, '0') }, { include_blank: false }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %>
+                <%= t('.month') %><%= f.select :day, (1..31).map{|num| num.to_s.rjust(2, '0') }, { include_blank: false }, class: "form-control custom-select col-2 d-inline #{ visited_date_err ? 'is-invalid' : '' }" %><%= t('.day') %>
                 <% if visited_date_err %>
                   <span class="error invalid-feedback"><%= visited_log.errors.full_messages_for(:visited_date).first %></span>
                 <% end %>
@@ -22,8 +22,8 @@
             </div>
 
             <div class="card-footer">
-              <%= f.submit class: 'btn btn-primary', data: { confirm: '送信してよろしいですか?', disable_with: '　送信中...　' } %>
-              <%= link_to('　削除　', customer_visited_log_path(company_code: @company.code, customer_id: visited_log.customer_id, id: visited_log.id), method: :delete, class: 'btn btn-sm btn-danger float-right', data: { confirm: '削除してよろしいですか？' }) if visited_log.persisted? %>
+              <%= f.submit class: 'btn btn-primary', data: { confirm: t('.submit_confirm'), disable_with: t('.submit_disable_with') } %>
+              <%= link_to(t('.delete_link'), customer_visited_log_path(company_code: @company.code, customer_id: visited_log.customer_id, id: visited_log.id), method: :delete, class: 'btn btn-sm btn-danger float-right', data: { confirm: t('.delete_confirm') }) if visited_log.persisted? %>
             </div>
           <% end %>
         </div>
