--- a/app/views/customer/visited_logs/new.html.erb
+++ b/app/views/customer/visited_logs/new.html.erb
@@ -7,10 +7,10 @@
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
-          <li class="breadcrumb-item"><a href="<%= customers_path %>"><%= Const::View::Name::CUSTOMER_INDEX %></a></li>
-          <li class="breadcrumb-item"><a href="<%= customer_path(@company.code, @customer) %>"><%= Const::View::Name::CUSTOMER_SHOW %></a></li>
-          <li class="breadcrumb-item active"><%= Const::View::Name::VISITED_LOG %></li>
+          <li class="breadcrumb-item"><a href="<%= homes_path %>"><%= t('.breadcrumb.home') %></a></li>
+          <li class="breadcrumb-item"><a href="<%= customers_path %>"><%= t('.breadcrumb.customer_index') %></a></li>
+          <li class="breadcrumb-item"><a href="<%= customer_path(@company.code, @customer) %>"><%= t('.breadcrumb.customer_show') %></a></li>
+          <li class="breadcrumb-item active"><%= t('.breadcrumb.visited_log') %></li>
         </ol>
       </div>
     </div>
