--- a/app/views/customers/_content_header.html.erb
+++ b/app/views/customers/_content_header.html.erb
@@ -7,7 +7,7 @@
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
+          <li class="breadcrumb-item"><a href="<%= homes_path %>"><%= t('.home') %></a></li>
           <li class="breadcrumb-item active"><%= active_breadcrumb_item %></li>
         </ol>
       </div>
