--- a/app/views/customers/new_with_line.html.erb
+++ b/app/views/customers/new_with_line.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= Const::View::Name::CUSTOMER_NEW %></h1>
+        <h1 class="m-0 text-dark"><%= t('common.customer_new') %></h1>
       </div>
     </div>
   </div>
