--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,10 +5,10 @@
       <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a href="<%= homes_path %>" class="nav-link">ホーム</a>
+      <a href="<%= homes_path %>" class="nav-link"><%= t('.home') %></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a href="<%= customers_path %>" class="nav-link">顧客</a>
+      <a href="<%= customers_path %>" class="nav-link"><%= t('.customer') %></a>
     </li>
   </ul>
 
@@ -33,7 +33,8 @@
         dataType : 'script',
       });
     }
-
-    setInterval(reloadNotifyArea, 5000000000000);
+    <% if Rails.env != :development %>
+      setInterval(reloadNotifyArea, 5000);
+    <% end %>
   });
 <% end %>
