--- a/app/views/layouts/_sub_sidebar.html.erb
+++ b/app/views/layouts/_sub_sidebar.html.erb
@@ -1,7 +1,7 @@
 <aside class="control-sidebar control-sidebar-dark">
   <div class="p-3">
-    <p><a href="<%= user_path(@company.code, current_user) %>">アカウント</a></p>
+    <p><a href="<%= user_path(@company.code, current_user) %>"><%= t('.account') %></a></p>
     <p></p>
-    <p><a href="<%= destroy_user_session_path(company_code: params[:company_code]) %>">ログアウト</a></p>
+    <p><a href="<%= destroy_user_session_path(company_code: params[:company_code]) %>"><%= t('.logout') %></a></p>
   </div>
 </aside>
