--- a/app/views/public/homes/index_for_tenant_promotion.html.erb
+++ b/app/views/public/homes/index_for_tenant_promotion.html.erb
@@ -5,7 +5,7 @@
         <p><%= image_tag @company.logo.try(:thumb_220).try(:url) if @company.logo.present? %></p>
         <h2><%= @company.name %></h2>
         <p><span>
-          <a href="<%= new_user_session_path(@company.code) %>" class="btn btn-primary btn-outline">To Login<i class="icon-arrow-right"></i></a>
+          <a href="<%= new_user_session_path(@company.code) %>" class="btn btn-primary btn-outline"><%= t('.to_login') %><i class="icon-arrow-right"></i></a>
         </span></p>
       </div>
     </div>
