--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,13 +2,13 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= Const::View::Name::USER_EDIT %></h1>
+        <h1 class="m-0 text-dark"><%= t('.user_edit') %></h1>
       </div>
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
-          <li class="breadcrumb-item active"><%= Const::View::Name::USER_EDIT %></li>
+          <li class="breadcrumb-item"><a href="<%= homes_path %>"><%= t('.home') %></a></li>
+          <li class="breadcrumb-item active"><%= t('.user_edit') %></li>
         </ol>
       </div>
     </div>
